<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bnet.data.controller.MainActivity">

    <TextView
        android:id="@+id/mainHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_header"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainHeader"
        android:hint="@string/username_label"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameField"
        android:inputType="textPassword"
        android:hint="@string/password_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordField"
        android:layout_centerHorizontal="true">
    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_label"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_label"
        android:layout_marginTop="20dp"/>
    </LinearLayout>
</RelativeLayout>
